--- a/app/src/main/res/layout/viewholder_cat.xml
+++ b/app/src/main/res/layout/viewholder_cat.xml
@@ -23,6 +23,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:scaleType="centerCrop"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -35,13 +36,14 @@
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:paddingVertical="8dp"
           android:gravity="center"
             tools:text="Dog Food "
           android:textSize="16sp"
           android:textColor="@color/gray"
           android:textStyle="bold"
-          android:minLines="2"
-          android:maxLines="2"
+            android:minLines="1"
+            android:maxLines="1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
