--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -13,7 +13,7 @@
         android:background="@color/orange"
         app:navigationIcon="?homeAsUpIndicator"
         app:navigationIconTint="@color/white"
-        app:title="My Cart"
+        app:title="@string/cart"
         app:titleCentered="true"
         app:titleTextAppearance="@style/ToolbarTitleText"/>
 
